[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "track-less"
version = "0.1.0"
description = "CLI tool to remove instrument tracks from songs using AI stem separation"
readme = "README.md"
requires-python = ">=3.10"
authors = [
    {name = "track-less", email = "noreply@example.com"}
]
dependencies = [
    "click>=8.0",
    "yt-dlp>=2023.0.0",
    "numpy>=1.24.0",
    "soundfile>=0.12.0",
    "torch>=2.0.0",
    "torchaudio>=2.0.0",
]

[project.scripts]
track-less = "track_less.cli:main"

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "black>=23.0",
    "ruff>=0.1.0",
]

[tool.setuptools.packages.find]
where = ["src"]
